--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,7 @@
 spring:
   application:
     name: qrcode-generator
-
   data:
     mongodb:
-      host: localhost
-      port: 27017
-      database: qrcodedb
+      uri: mongodb://user:senha@localhost:27017/qrcodedb?authSource=admin
+
